--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
 
       <div class="form-group">
-        <label for="password">Email password</label>
+        <label for="password">password</label>
         <input type="password" id="password" name="password">
       </div>
 
@@ -80,16 +80,7 @@
         <textarea name="message" id="message" cols="30" rows="5"></textarea>
       </div>
 
-        <div class="form-group">
-      <label for="cars">Subject:</label>
-       <select name="Subject" id="Subject">
-
-          <optgroup label="select">
-           <option value="PCM">PCM</option>
-           <option value="PCB">PCB</option>
-           <option value="PCB">PCM/PCB</option>
-       </select>
-         </div>
+  
 
       <button type="submit">submit</button>
     </form>
