--- a/index.html
+++ b/index.html
@@ -56,23 +56,20 @@
     <form action="https://formspree.io/f/xzbwpoew" method="POST" id="my-form">
 
       <div class="form-group">
-        <label for="firstName"> First Name</label>
+        <label for="firstName"> full Name</label>
         <input type="text" id="firstName" name="firstName">
       </div>
 
       <div class="form-group">
-        <label for="latsName">Last Name</label>
-        <input type="text" id="lastName" name="lastName">
+        <label for="latsName">Email</label>
+        <input type="email" id="lastName" name="lastName">
       </div>
 
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email">
-      </div>
+      
 
       <div class="form-group">
-        <label for="password">password</label>
-        <input type="password" id="password" name="password">
+        <label for="lastname">password</label>
+      <input type="password" id="lastName" name="lastName">
       </div>
 
       <div class="form-group">
