--- a/index.html
+++ b/index.html
@@ -56,20 +56,23 @@
     <form action="https://formspree.io/f/xzbwpoew" method="POST" id="my-form">
 
       <div class="form-group">
-        <label for="firstName"> full Name</label>
+        <label for="firstName"> First Name</label>
         <input type="text" id="firstName" name="firstName">
       </div>
 
       <div class="form-group">
-        <label for="latsName">Email</label>
-        <input type="email" id="lastName" name="lastName">
+        <label for="latsName">Last Name</label>
+        <input type="text" id="lastName" name="lastName">
       </div>
 
-      
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email">
+      </div>
 
       <div class="form-group">
-        <label for="lastname">password</label>
-      <input type="password" id="lastName" name="lastName">
+        <label for="password">password</label>
+        <input type="password" id="password" name="password">
       </div>
 
       <div class="form-group">
@@ -77,7 +80,16 @@
         <textarea name="message" id="message" cols="30" rows="5"></textarea>
       </div>
 
-  
+        <div class="form-group">
+      <label for="cars">Subject:</label>
+       <select name="Subject" id="Subject">
+
+          <optgroup label="select">
+           <option value="PCM">PCM</option>
+           <option value="PCB">PCB</option>
+           <option value="PCB">PCM/PCB</option>
+       </select>
+         </div>
 
       <button type="submit">submit</button>
     </form>
